--- a/components/management/CMakeLists.txt
+++ b/components/management/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
         SRCS "management.c"
         INCLUDE_DIRS "include"
-        REQUIRES shared lwip esp_wifi
+        REQUIRES shared lwip esp_wifi wpa_supplicant
 )
