--- a/components/sniffer/CMakeLists.txt
+++ b/components/sniffer/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
         SRCS "sniffer.c" "csi_sniffer.c" "l2_sniffer.c" "sdcard_writer.c"
         INCLUDE_DIRS "include"
-        REQUIRES shared nvs_flash esp_timer sdmmc fatfs esp_wifi
+        REQUIRES shared nvs_flash esp_timer fatfs esp_wifi
 )
