Upload measurements to server

--- a/components/management/CMakeLists.txt
+++ b/components/management/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
         SRCS "management.c"
         INCLUDE_DIRS "include"
-        REQUIRES shared lwip esp_wifi wpa_supplicant sdmmc fatfs
+        REQUIRES shared lwip esp_wifi wpa_supplicant sdmmc fatfs esp_http_client
 )
