--- a/components/shared/CMakeLists.txt
+++ b/components/shared/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
         SRCS "shared.c"
         INCLUDE_DIRS "include"
-        REQUIRES sdmmc
+        REQUIRES sdmmc esp_wifi
 )
